--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
-{
+{"browser": {
+  "fs": false,
+  "path": false,
+  "os": false
+},
   "name": "mrh_sticker_shop",
   "version": "0.1.0",
   "private": true,
@@ -20,4 +24,6 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6"
   }
+  
 }
+
