--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p $PORT",
+    "lint": "next lint",
+    "heroku-postbuild": "npm run build"
+
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
@@ -24,6 +26,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6"
   }
+  
   
 }
 
