updating for heroku

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 },
   "name": "mrh_sticker_shop",
   "version": "0.1.0","engines": {
-    "node": "16.x"
+    "node": "16.x",
+    "npm" : "8.x"
   },
   "private": false,
   "scripts": {
